--- a/app/assets/templates/ideas/index.js.hbs
+++ b/app/assets/templates/ideas/index.js.hbs
@@ -1,1 +1,28 @@
-<h1>	handlebars</h1>	
+<div class="container">
+    <div class="row">
+		<div class="well">
+        <h1 class="text-center">Idea Voter</h1> <button type="button" class="btn btn-default btn-lg btn-block"> Contribute Your Idea! </button>
+        <br>
+        <div class="list-group">
+          <a class="list-group-item active">
+                <div class="media col-md-3">
+                    <figure class="pull-left">
+                        <img class="media-object img-rounded img-responsive"  src="http://placehold.it/350x250" alt="placehold.it/350x250" >
+                    </figure>
+                </div>
+                <div class="col-md-6">
+                    <h4 class="list-group-item-heading"> {{idea.title}}Idea Title </h4>
+                    <p class="list-group-item-text"> {{idea.description}} Idea Description Qui diam libris ei, vidisse incorrupte at mel. His euismod salutandi dissentiunt eu. Habeo offendit ea mea. Nostro blandit sea ea, viris timeam molestiae an has. At nisl platonem eum. 
+                        Vel et nonumy gubergren, ad has tota facilis probatus. Ea legere legimus tibique cum, sale tantas vim ea, eu vivendo expetendis vim. Voluptua vituperatoribus et mel, ius no elitr deserunt mediocrem. Mea facilisi torquatos ad.
+                    </p>
+                </div>
+                <div class="col-md-3 text-center">
+                    <h2> {{idea.votes}} 14240 <small> votes </small></h2>
+                    <button type="button" class="btn btn-default btn-lg btn-block"> Upvote! </button>
+                </div>
+          </a>
+
+        </div>
+        </div>
+	</div>
+</div>
