Interpolate with Handlebars

--- a/app/assets/templates/ideas/index.js.hbs
+++ b/app/assets/templates/ideas/index.js.hbs
@@ -15,7 +15,7 @@
                     </figure>
                 </div>
                 <div class="col-md-6">
-                    <h4 class="list-group-item-heading"> {{this.collection.length}}
+                    <h4 class="list-group-item-heading"> {{collection.length}}
                     {{idea.title}}Idea Title </h4>
                     <p class="list-group-item-text"> {{idea.description}} Idea Description Qui diam libris ei, vidisse incorrupte at mel. His euismod salutandi dissentiunt eu. Habeo offendit ea mea. Nostro blandit sea ea, viris timeam molestiae an has. At nisl platonem eum. 
                         Vel et nonumy gubergren, ad has tota facilis probatus. Ea legere legimus tibique cum, sale tantas vim ea, eu vivendo expetendis vim. Voluptua vituperatoribus et mel, ius no elitr deserunt mediocrem. Mea facilisi torquatos ad.
