--- a/app/assets/templates/ideas/idea.js.hbs
+++ b/app/assets/templates/ideas/idea.js.hbs
@@ -1,12 +1,14 @@
 
+
         <div class="list-group">
         
           <a class="list-group-item active">
                 <div class="media col-md-3">
                     <figure class="pull-left">
-                        <img class="media-object img-rounded img-responsive"  src="http://placehold.it/350x250" alt="placehold.it/350x250" >
+                        <img class="media-object img-rounded img-responsive"  src="http://{{~idea.attributes.title~}}.jpg.to/" alt="{{idea.attributes.title}}" >
                     </figure>
                 </div>
+
                 <div class="col-md-6">
                     <h4 class="list-group-item-heading"> 
                     {{idea.attributes.title}} </h4>
@@ -16,10 +18,12 @@
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
-                    <h2> {{idea.attributes.votes}} <small> votes </small></h2>
+                    <h2 id= "votes"> {{idea.attributes.votes}} <small> votes </small></h2>
                     <button id ="upvote" class="btn btn-default btn-lg btn-block"> Upvote! </button>
                 </div>
           </a>
 
          
         </div>
+
+
