--- a/app/assets/templates/ideas/idea.js.hbs
+++ b/app/assets/templates/ideas/idea.js.hbs
@@ -5,7 +5,7 @@
           <a class="list-group-item active">
                 <div class="media col-md-3">
                     <figure class="pull-left">
-                        <img class="media-object img-rounded img-responsive"  src="http://{{~idea.attributes.title~}}.jpg.to/" alt="{{idea.attributes.title}}" >
+                        <img class="media-object img-rounded img-responsive"  src="http://greatidea.jpg.to/" alt="{{idea.attributes.title}}" >
                     </figure>
                 </div>
 
